Error handeling in create tweets form

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -17,8 +17,11 @@ Django Home
     <div class="col-md-4 mx-auto col-10">
         <form class="form" id="tweet-create-form" method="POST" action="/tweets/create_tweet">
             {% csrf_token %}
+            <div class="d-none alert alert-danger" id="create-form-error">
+
+            </div>
             <input type="hidden" name="next" value="/">
-            <textarea class="form-control" name="content" placeholder="Your Tweet...."></textarea>
+            <textarea required class="form-control" name="content" placeholder="Your Tweet...."></textarea>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
@@ -29,34 +32,53 @@ Django Home
 
 
 <script>
+    function handleTweetFormError(msg, display) {
+        var errorDiv = document.getElementById("create-form-error")
+        if (display == true) {
+            errorDiv.setAttribute("class", "d-block alert alert-danger")
+            errorDiv.innerHTML = msg
+        } else {
+            // hide error
+            errorDiv.setAttribute("class", "d-none alert alert-danger")
+        }
+    }
+
     function handleTweetCreateFormDidSubmit(event) {
         event.preventDefault();
         const myForm = event.target;
         const myFormData = new FormData(myForm);
 
-        // for (var myItem of myFormData.entries()) {
-        //     console.log(myItem);
-        // }
-
         const url = myForm.getAttribute("action");
         const method = myForm.getAttribute("method");
 
         const xhr = new XMLHttpRequest();
+        const responseType = "json";
+        xhr.responseType = responseType
         xhr.open(method, url);
         xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest");
         xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
         xhr.onload = () => {
-            if (xhr.readyState == 4) {
+            if (xhr.status == 201) {
                 var serverResponse = xhr.response;
-                console.log(serverResponse);
-                loadTweets(tweetsEl);
+                // console.log(serverResponse);
+                var newTweetElement = serverResponse;
+                var ogElement = tweetsContainerELement.innerHTML
+                tweetsContainerELement.innerHTML = formatTweetElement(newTweetElement) + ogElement;
+                myForm.reset();
+                handleTweetFormError("", false);
+            } else if (xhr.status == 400) {
+                // console.log(xhr.response.content)
+                // alert(xhr.response)
+                handleTweetFormError(xhr.response.content, true);
+            } else if (xhr.status == 500) {
+                console.log("there was a server error")
             }
         }
         xhr.send(myFormData);
 
     }
 
-    const tweetsEl = document.getElementById('tweets');
+    const tweetsContainerELement = document.getElementById('tweets');
     const tweetCreateFormEl = document.getElementById('tweet-create-form')
 
     tweetCreateFormEl.addEventListener("submit", handleTweetCreateFormDidSubmit)
@@ -85,7 +107,7 @@ Django Home
         xhr.send();
     }
 
-    loadTweets(tweetsEl);
+    loadTweets(tweetsContainerELement);
 
     function handleDidLike(tweet_id, currentCount) {
         console.log(currentCount);
